# terre

./: Cargo.toml  README.md  build.rs
src/: app.rs  camera.rs  egui_renderer.rs  input.rs  instance.rs  lib.rs  main.rs  model.rs  node.rs  resources.rs  shader.wgsl  texture.rs  window.rs  world.rs
src/asset/: model_loader.rs
src/component/: mod.rs  model_renderer.rs  transform.rs
src/ecs/: mod.rs  resource.rs
src/graphics/: mod.rs
src/graphics/pass/: mod.rs  phong.rs  shader.wgsl
src/level/: mod.rs
src/level/world/: mod.rs
terre_core/: Cargo.toml
terre_core/macros/: Cargo.toml
terre_core/macros/src/: lib.rs
terre_core/src/: app.rs  lib.rs  schedule.rs  transform.rs
terre_core/src/asset/: mod.rs
terre_core/src/ecs/: mod.rs  resource.rs  system.rs
terre_core/src/render/: material.rs  mod.rs  model.rs  work.rs
terre_core/src/render/camera/: bundle.rs  mod.rs
terre_core/src/render/pass/: mod.rs  phong.rs
