[package]
name = "wgpu-try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3.0"
bytemuck = "1.14.0"
image = "0.24.7"
anyhow = "1.0.75"
cgmath = "0.18.0"
