[package]
name = "wgpu-try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3.0"
bytemuck = "1.14.0"
image = "0.24.7"
cgmath = "0.18.0"
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"
tobj = { version = "3.2.1", features = ["async", ]}
uuid = { version = "1.6.1", features = ["v4"] }
noise = "0.8.2"
derive_builder = "0.12.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"

