[package]
name = "terre_core"
version = "0.1.0"
edition = "2021"


[dependencies]
env_logger = "0.10"
log = "0.4"
pollster = "0.3.0"
derive_builder = "0.12.0"
bytemuck = "1.14.0"
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"
tobj = { version = "3.2.1", features = ["async", ]}
uuid = { version = "1.6.1", features = ["v4"] }
downcast-rs = "1.2.0"

# CG --
winit = "0.28"
wgpu = "0.18"
cgmath = "0.18.0"

# ecs --
hecs = { version = "0.10.4", features = ["hecs-macros", "macros"] }
image = "0.24.7"

terre_core_macros = {path = "macros"}